--- a/restaurant/index.css
+++ b/restaurant/index.css
@@ -107,13 +107,14 @@ header {
 }
 
 .add-item-btn {
+    justify-content: center;
     cursor: pointer;
     background-color: transparent;
     border: 1.5px solid #DEDEDE;
     color: #3C3C3C;
     font-size: 1.125rem;
-    padding: 0.75em;
-    aspect-ratio: 1;
+    width: 45px;
+    aspect-ratio: 1 / 1;
     border-radius: 50%;
 }
 
